--- a/Makefile.uk
+++ b/Makefile.uk
@@ -3,12 +3,17 @@ $(eval $(call addlib_s,libndpip,$(CONFIG_LIBNDPIP)))
 MUSL-IMPORTED_BUILD += $(LIBNDPIP_BUILD)/musl-imported
 MUSL-IMPORTED += $(LIBNDPIP_BASE)/musl-imported
 
+LIBDNET-IMPORTED_BUILD += $(LIBNDPIP_BUILD)/libdnet-imported
+LIBDNET-IMPORTED += $(LIBNDPIP_BASE)/libdnet-imported
+
 LIBNDPIP_COMMON_INCLUDES-y += -I$(MUSL-IMPORTED_BUILD)/include
 LIBNDPIP_COMMON_INCLUDES-y += -I$(MUSL-IMPORTED_BUILD)/arch/$(ARCH)
 
 LIBNDPIP_COMMON_INCLUDES-y += -I$(MUSL-IMPORTED)/include
 LIBNDPIP_COMMON_INCLUDES-y += -I$(MUSL-IMPORTED)/src/internal
 LIBNDPIP_COMMON_INCLUDES-y += -I$(MUSL-IMPORTED)/arch/$(ARCH)
+
+LIBNDPIP_COMMON_INCLUDES-y += -I$(LIBDNET-IMPORTED)/include
 
 LIBNDPIP_COMMON_INCLUDES-y += -I$(LIBNDPIP_BASE)/src/include
 LIBNDPIP_COMMON_INCLUDES-y += -I$(LIBNDPIP_BASE)/include
@@ -23,6 +28,8 @@ LIBNDPIP_SRCS-y += $(MUSL-IMPORTED)/src/network/htonl.c
 LIBNDPIP_SRCS-y += $(MUSL-IMPORTED)/src/network/ntohs.c
 LIBNDPIP_SRCS-y += $(MUSL-IMPORTED)/src/network/ntohl.c
 LIBNDPIP_SRCS-y += $(MUSL-IMPORTED)/src/network/inet_aton.c
+
+LIBNDPIP_SRCS-y += $(LIBDNET-IMPORTED)/src/ip-util.c
 
 LIBNDPIP_SRCS-y += $(LIBNDPIP_BASE)/src/socket.c
 LIBNDPIP_SRCS-y += $(LIBNDPIP_BASE)/src/tcp.c
