--- a/Makefile.uk
+++ b/Makefile.uk
@@ -21,6 +21,7 @@ LIBNDPIP_COMMON_INCLUDES-y += -I$(LIBNDPIP_BASE)/include
 LIBNDPIP_CFLAGS += -DNDPIP_UK
 
 CINCLUDES-$(CONFIG_LIBNDPIP) += $(LIBNDPIP_COMMON_INCLUDES-y)
+CXXINCLUDES-$(CONFIG_LIBNDPIP) += $(LIBNDPIP_COMMON_INCLUDES-y)
 
 LIBNDPIP_SRCS-y += $(MUSL-IMPORTED)/src/network/ether.c
 LIBNDPIP_SRCS-y += $(MUSL-IMPORTED)/src/network/htons.c
