--- a/Makefile.linux-dpdk
+++ b/Makefile.linux-dpdk
@@ -18,7 +18,7 @@ CFLAGS += -O3
 CFLAGS += -Wall
 CFLAGS += -Wno-address-of-packed-member
 CFLAGS += -g
-CFLAGS += -flto
+#CFLAGS += -flto
 CFLAGS += -DNDPIP_LINUX_DPDK
 CFLAGS += -Isrc/include
 CFLAGS += -Ilibdnet-imported/include
