--- a/Makefile.linux-dpdk
+++ b/Makefile.linux-dpdk
@@ -16,6 +16,7 @@ OBJS-y = $(patsubst %.c,%.c.o,$(SRCS-y))
 LIB = libndpip.a
 
 CFLAGS += -O3
+#CFLAGS += -fsanitize=address
 CFLAGS += -Wall
 CFLAGS += -Wno-address-of-packed-member
 CFLAGS += -g
