--- a/Makefile.linux-dpdk
+++ b/Makefile.linux-dpdk
@@ -15,8 +15,10 @@ OBJS-y = $(patsubst %.c,%.c.o,$(SRCS-y))
 
 LIB = libndpip.a
 
+CFLAGS ?=
 CFLAGS += -O3
 #CFLAGS += -fsanitize=address
+#CFLAGS += -flto
 CFLAGS += -Wall
 CFLAGS += -Wno-address-of-packed-member
 CFLAGS += -g
