Added no-checksum compile-time option

--- a/Makefile.linux-dpdk
+++ b/Makefile.linux-dpdk
@@ -24,6 +24,7 @@ CFLAGS += -Wno-address-of-packed-member
 CFLAGS += -g
 CFLAGS += -std=gnu17
 CFLAGS += -DNDPIP_LINUX_DPDK
+#CFLAGS += -DNDPIP_DEBUG_NO_CKSUM
 CFLAGS += -Isrc/include
 
 CFLAGS += $(shell $(PKGCONF) --cflags libdpdk)
