Misc bug fixes and improvements

--- a/Makefile.linux-dpdk
+++ b/Makefile.linux-dpdk
@@ -18,6 +18,7 @@ PC = ndpip.pc
 CFLAGS ?=
 CFLAGS += -O3
 CFLAGS += -Wall
+CFLAGS += -Werror
 CFLAGS += -Wno-address-of-packed-member
 CFLAGS += -g
 CFLAGS += -std=gnu17
